# transistor_rm2026_algorithm_visual_ws

./: .gitignore  README  todoList.txt
other_files/: rm2026相机.xlsx
other_files/WorkingMd/unsolved_issues/: SwitchConnection.md
src/auto_aim/: CMakeLists.txt  config.yaml  package.xml  parameter.txt
src/auto_aim/include/armor_detector/: Armor.h  ArmorAngleKalman.h  ArmorClassifier.h  ArmorDetector.h  BallisticSolver.h  CRC.h  LightBar.h  LightBarDetector.h  Params.h
src/auto_aim/include/camera/: Camera.h
src/auto_aim/include/test_codes/: FrameRateCounter.h  PositionPredictor.h  UnwarpUtils.h  model_rm2026.h
src/auto_aim/launch/: auto_aim_launch.py
src/auto_aim/msg/: GimbalCommand.msg  SerialData.msg
src/auto_aim/src/.history/armor_detector/: BallisticSolver_20250212204250.cpp  BallisticSolver_20250212222936.cpp  BallisticSolver_big_20250212211204.cpp  BallisticSolver_big_20250212222930.cpp
src/auto_aim/src/armor_detector/: ArmorAngleKalman.cpp  ArmorClassifier.cpp  ArmorDetector.cpp  BallisticSolver_big.cpp  BallisticSolver_small.cpp  LightBarDetector.cpp
src/auto_aim/src/camera/: cameraConnect.cpp
src/auto_aim/src/nodes/: ArmorDetect_Node.cpp  CRC.cpp  Com_Node.cpp
src/auto_aim/src/test_codes/: FrameRateCounter.cpp  PositionPredictor.cpp  UnwarpUtils.cpp
